--- a/backend/config/database.yml
+++ b/backend/config/database.yml
@@ -81,6 +81,7 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
   database: RecipeShareApplication_production
   username: RecipeShareApplication
   password: <%= ENV["RECIPESHAREAPPLICATION_DATABASE_PASSWORD"] %>
